building releases/hotfixes on PR instead of push

--- a/.github/workflows/ci-develop.yaml
+++ b/.github/workflows/ci-develop.yaml
@@ -3,16 +3,18 @@ on:
   push:
     branches:
       - develop
-      - 'release/**'
-      - 'hotfix/**'
   pull_request:
     branches:
       - develop
-
+      - master
 jobs:
   build-docker:
     name: Build Docker container
     runs-on: ubuntu-20.04
+    if: |-
+      !github.event.pull_request == true ||
+      startsWith(github.event.pull_request.head.ref, 'release/') ||
+      startsWith(github.event.pull_request.head.ref, 'hotfix/')
     strategy:
       matrix:
         project: ['pipeline-runner']
