--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -27,6 +27,7 @@ RUN R -e 'pak::pkg_install("Seurat")'
 RUN R -e 'pak::pkg_install("gprofiler2")'
 RUN R -e 'pak::pkg_install("sccore")'
 RUN R -e 'pak::pkg_install("GO.db")'
+RUN R -e 'pak::pkg_install("R.utils")'
 RUN R -e 'pak::pkg_install("satijalab/seurat-wrappers")'
 RUN R -e 'pak::pkg_install("batchelor")'
 
