Init R package and test classifier filter (#104)
* init r package

* ignore debug

* remove file names within file

* use styler

* cleanup

* fix Dockerfile

* init filter_emptydrops tests

* fix introduced error for demo image

* add sample aware test

* update README; make task names look distinct

* update README

* update gem2s step messages

* add timer to gem2s steps

--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -74,8 +74,9 @@ RUN pip install awscli
 COPY aws_config /root/.aws/config
 
 # start app
-COPY src ./
-ENTRYPOINT ["Rscript", "init.r"]
+ADD R ./R
+COPY init.R .
+ENTRYPOINT ["Rscript", "init.R"]
 
 
 # ---------------------------------------------------
@@ -93,5 +94,6 @@ RUN R -e 'pak::pkg_install("lintr")'
 RUN R -e 'pak::pkg_install("styler")'
 
 # start app
-COPY src ./
-ENTRYPOINT ["Rscript", "init.r"]
+ADD R ./R
+COPY init.R .
+ENTRYPOINT ["Rscript", "init.R"]
