--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -3,6 +3,7 @@
 export(check_config)
 export(filter_doublets)
 export(filter_emptydrops)
+export(filter_gene_umi_outlier)
 export(filter_high_mito)
 export(generate_default_values_cellSizeDistribution)
 export(generate_default_values_classifier)
