export filter_low_cellsize

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -5,6 +5,6 @@ export(filter_doublets)
 export(filter_emptydrops)
 export(filter_gene_umi_outlier)
 export(filter_high_mito)
-export(generate_default_values_cellSizeDistribution)
+export(filter_low_cellsize)
 export(generate_default_values_classifier)
 export(get_doublet_score)
