--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -6,5 +6,7 @@ export(filter_emptydrops)
 export(filter_gene_umi_outlier)
 export(filter_high_mito)
 export(filter_low_cellsize)
+export(generate_default_values_cellSizeDistribution)
 export(generate_default_values_classifier)
 export(get_doublet_score)
+importFrom(magrittr,"%>%")
