--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,13 @@ jobs:
           # the final tag is something like:
           # refs-heads-master-a4f8bc313dae
           # this is what we push to ECR
-          echo "::set-output name=tag::$REF_ID-$GITHUB_SHA"
+          # we will also take semver'd tags like `1.0.0` and use them for releases
+
+          if [ "${{ github.event_name }}" = "release" ] && [ "${{ github.event.action }}" = "released" ]; then
+            echo "::set-output name=tag::${REF_ID/refs-tags-/}"
+          else
+            echo "::set-output name=tag::$REF_ID-$GITHUB_SHA"
+          fi
 
           # This will take a GitHub repo name like `biomage-ltd/iac`
           # and turns it into `iac`. This will be the name of the
@@ -48,23 +54,21 @@ jobs:
             echo "This is a pull request, base ref and sha set to the target branch."
             BASE_REF="refs-heads-${{ github.event.pull_request.base.ref }}"
             BASE_SHA=${{ github.event.pull_request.base.sha }}
-            # If the CI build time gets in your way while working on a PR,
-            #  temporarily hardcode these values in was similar to this
-            #  BASE_REF="refs-pull-7-merge"
-            #  BASE_SHA="ad9c5001ab4a3077790db4f04ac0b09cf5324683"
+            echo "::set-output name=tag::$BASE_REF-$BASE_SHA"
           fi
 
           if [ "${{ github.event_name }}" = "push" ]; then
             echo "This is a push, base ref and sha set to the previous commit."
             BASE_REF=$(echo $GITHUB_REF | sed 's/\//-/g')
             BASE_SHA="${{ github.event.before }}"
-            # If the CI build time gets in your way while working on a PR,
-            #  temporarily hardcode these values in was similar to this
-            #  BASE_REF="refs-pull-7-merge"
-            #  BASE_SHA="ad9c5001ab4a3077790db4f04ac0b09cf5324683"
+            echo "::set-output name=tag::$BASE_REF-$BASE_SHA"
           fi
 
-          echo "::set-output name=tag::$BASE_REF-$BASE_SHA"
+          if [ "${{ github.event_name }}" = "release" ]; then
+            echo "This is a release, base ref and sha set to the current commit."
+            BASE_SHA="$GITHUB_SHA"
+            echo "::set-output name=tag::refs-heads-master-$BASE_SHA"
+          fi
 
       - id: set-up-creds
         name: Configure AWS credentials
@@ -178,19 +182,29 @@ jobs:
 
           if [ "${{ matrix.environment }}" = "production" ]; then
             SANDBOX_ID="default"
+            CHART_REF="$GITHUB_SHA"
+            KUBERNETES_ENV="staging"
+
+            SHORT_TAG_REF=${REF_DASHED/refs-tags-/}
+            IMAGE_GLOB="glob:${IMAGE_TAG/$SHORT_TAG_REF/*}"
+          fi
+
+          if [ "${{ matrix.environment }}" = "develop" ]; then
+            SANDBOX_ID="default"
+            CHART_REF="$GITHUB_SHA"
+            KUBERNETES_ENV="staging"
+            IMAGE_GLOB="glob:${IMAGE_TAG/$GITHUB_SHA/*}"
           fi
 
           if [ "${{ matrix.environment }}" = "staging" ]; then
             SANDBOX_ID="STAGING_SANDBOX_ID"
-          fi
-
-          if [ "${{ github.ref }}" = "refs/heads/master" ]; then
-            CHART_REF="$GITHUB_SHA"
-          else
             CHART_REF="STAGING_CHART_REF"
+            KUBERNETES_ENV="staging"
+            IMAGE_GLOB="glob:${IMAGE_TAG/$GITHUB_SHA/*}"
           fi
 
           echo "::set-output name=sandbox-id::$SANDBOX_ID"
+          echo "::set-output name=kubernetes-env::$KUBERNETES_ENV"
 
           yq w -d1 .flux.yaml metadata.namespace "$DEPLOYMENT_NAME-$SANDBOX_ID" \
           | yq w -d0 - metadata.name "$DEPLOYMENT_NAME-$SANDBOX_ID" \
@@ -200,8 +214,8 @@ jobs:
           | yq w -d1 - spec.chart.ref "$CHART_REF" \
           | yq w -d1 - spec.releaseName "$DEPLOYMENT_NAME" \
           | yq w -d1 - spec.values.pipeline-runner.image "$IMAGE_NAME-pipeline-runner" \
-          | yq w -d1 - spec.values.serviceAccount.iamRole "arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:role/pipeline-role-${{ matrix.environment }}" \
-          | yq w -d1 - "metadata.annotations[filter.fluxcd.io/pipeline-runner]" "glob:${IMAGE_TAG/$GITHUB_SHA/*}-pipeline-runner" \
+          | yq w -d1 - spec.values.serviceAccount.iamRole "arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:role/pipeline-role-$KUBERNETES_ENV" \
+          | yq w -d1 - "metadata.annotations[filter.fluxcd.io/pipeline-runner]" "glob:$IMAGE_GLOB-pipeline-runner" \
           > $DEPLOYMENT_NAME.yaml
 
           cat $DEPLOYMENT_NAME.yaml
@@ -219,22 +233,22 @@ jobs:
           enforce_admins: false
           retries: 8
 
-      - name: Push production deployment to iac for deployment
+      - name: Push production/develop release to iac for deployment
         if:
-          github.ref == 'refs/heads/master' && github.event_name == 'push' && matrix.environment == 'production'
+          (matrix.environment == 'production' && github.event_name == 'release' && github.event.action == 'released') || (matrix.environment == 'develop' && github.event_name == 'push')
         uses: dmnemec/copy_file_to_another_repo_action@v1.0.4
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           source_file: '${{ steps.fill-metadata.outputs.deployment-name }}.yaml'
           destination_repo: '${{ github.repository_owner }}/iac'
-          destination_folder: 'releases/${{ matrix.environment }}'
+          destination_folder: 'releases/${{ steps.fill-metadata.outputs.kubernetes-env }}'
           user_email: 'ci@biomage.net'
           user_name: 'Biomage CI/CD'
 
       - name: Change name of deployment file for staging deployment
         if:
-          matrix.environment == 'staging'
+          (github.event_name == 'pull_request' || github.event_name == 'push') && matrix.environment == 'staging'
         env:
           DEPLOYMENT_NAME: ${{ steps.fill-metadata.outputs.deployment-name }}
           REF_DASHED: ${{ steps.fill-metadata.outputs.ref-dashed }}
@@ -243,7 +257,7 @@ jobs:
 
       - name: Push staging deployment template to iac
         if:
-          matrix.environment == 'staging'
+          (github.event_name == 'pull_request' || github.event_name == 'push') && matrix.environment == 'staging'
         uses: dmnemec/copy_file_to_another_repo_action@v1.0.4
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
@@ -267,7 +281,7 @@ jobs:
 
       - id: send-to-slack
         name: Send failure notification to Slack
-        if: failure() && github.event_name == 'push'
+        if: failure()
         env:
           SLACK_BOT_TOKEN: ${{ secrets.BUILD_STATUS_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
@@ -275,3 +289,13 @@ jobs:
           channel: pipelines
           status: FAILED
           color: danger
+
+  ready-to-merge:
+    name: Ready for merging
+    runs-on: ubuntu-20.04
+    needs: deploy
+    steps:
+      - id: ready-to-merge
+        name: Signal readiness to merge
+        run: |-
+          exit 0
