--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -148,7 +148,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        environment: ['production', 'staging']
+        environment: ['production', 'staging', 'develop']
     steps:
       - id: checkout
         name: Check out source code
