Add extra functionality to CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,12 @@ on:
   push:
     branches:
       - master
+  release:
+    types:
+      - released
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build-docker:
