--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -130,7 +130,7 @@ jobs:
         name: Generate codecov report
         run: |-
           ci_env=`bash <(curl -s https://codecov.io/env)`
-          docker run $ci_env -e CI=true ...
+          docker run $ci_env -e CI=true $IMAGE_NAME bash
            |----- inside docker container
            | # exec tests
            | R -e 'install.packages("covr")'
@@ -138,6 +138,8 @@ jobs:
            | # Your Codecov Uploader approach here
            | # See more at https://docs.codecov.com/docs/codecov-uploader
            | ./codecov
+
+          cat hello
        env:
          IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.tag, matrix.project) }}
 
