--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -16,4 +16,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 3.0.0)
+Imports:
+    data.table,
+    covr
 Config/testthat/edition: 3
