--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -9,4 +9,5 @@ export(filter_low_cellsize)
 export(generate_default_values_cellSizeDistribution)
 export(generate_default_values_classifier)
 export(get_doublet_score)
+import(data.table)
 importFrom(magrittr,"%>%")
