--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -30,9 +30,14 @@ RUN R -e "install.packages('remotes', repos = c(CRAN = 'https://cloud.r-project.
 COPY renv.lock.init .
 RUN R -e "renv::init(bare = TRUE); options(renv.consent = TRUE); renv::restore(lockfile='renv.lock.init')"
 
+# need for covr
+# move to requirements_debian.txt next time update renv.lock.init
+RUN apt-get update && apt-get -y install git
+
 # use renv::snapshot() while R dependency updates are quick to build
 COPY renv.lock .
 RUN R -e "options(renv.consent = TRUE); renv::restore(lockfile='renv.lock')"
+
 
 
 # ---------------------------------------------------
