--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -133,7 +133,7 @@ jobs:
           docker run $ci_env -e CI=true \
             --entrypoint /bin/bash \
             -v $(pwd):/app $IMAGE_NAME \
-            -c "R -e 'covr::codecov(\"/app\")'"
+            -c "ln -s /app/.git . && R -e 'covr::codecov(\"/app/pipeline-runner\")'"
 
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.tag, matrix.project) }}
