--- a/pipeline-runner/codecov.yaml
+++ b/pipeline-runner/codecov.yaml
@@ -14,6 +14,4 @@ coverage:
         # this allows a 5% drop from the previous base commit coverage
         threshold: 3%
 
-    patch:                    # measuring the coverage of new changes
-      default:
-        enabled: no
+    patch: no                   # measuring the coverage of new changes
