--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -238,6 +238,8 @@ jobs:
           | yq w -d1 - metadata.labels.sandboxId "$SANDBOX_ID" \
           | yq w -d1 - spec.chart.ref "$CHART_REF" \
           | yq w -d1 - spec.releaseName "$DEPLOYMENT_NAME" \
+          | yq w -d1 - spec.values.clusterEnv "$CLUSTER_ENV" \
+          | yq w -d1 - spec.values.awsAccountId "${{ steps.setup-aws.outputs.aws-account-id }}" \
           | yq w -d1 - spec.values.pipelineRunner.image "$IMAGE_NAME-pipeline-runner" \
           | yq w -d1 - spec.values.sandboxId "$SANDBOX_ID" \
           | yq w -d1 - spec.values.replicaCount $REPLICA_COUNT \
