--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -239,7 +239,7 @@ jobs:
           | yq w -d1 - spec.chart.ref "$CHART_REF" \
           | yq w -d1 - spec.releaseName "$DEPLOYMENT_NAME" \
           | yq w -d1 - spec.values.clusterEnv "$KUBERNETES_ENV" \
-          | yq w -d1 - spec.values.awsAccountId \"${{ steps.setup-aws.outputs.aws-account-id }}\" \
+          | yq w -d1 - spec.values.awsAccountId --tag '!!str' "${{ steps.setup-aws.outputs.aws-account-id }}" \
           | yq w -d1 - spec.values.awsRegion "${{ secrets.AWS_DEFAULT_REGION }}" \
           | yq w -d1 - spec.values.pipelineRunner.image "$IMAGE_NAME-pipeline-runner" \
           | yq w -d1 - spec.values.sandboxId "$SANDBOX_ID" \
