--- a/chart-infra/templates/pipeline-spawn-right-to-api.yaml
+++ b/chart-infra/templates/pipeline-spawn-right-to-api.yaml
@@ -8,7 +8,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["pods"]
-  verbs: ["get", "list", "patch"]
+  verbs: ["get", "list", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
