--- a/pipeline-runner/codecov.yml
+++ b/pipeline-runner/codecov.yml
@@ -1,5 +1,5 @@
 codecov:
-  require_ci_to_pass: no
+  require_ci_to_pass: yes
 
 coverage:
   range: 20..100
@@ -7,11 +7,6 @@ coverage:
   precision: 2
 
   status:
-    project:                   # measuring the overall project coverage
-      default:
-        target: auto
-        # adjust accordingly based on how flaky your tests are
-        # this allows a 5% drop from the previous base commit coverage
-        threshold: 3%
+    project: false                   # measuring the overall project coverage
 
     patch: false                 # measuring the coverage of new changes
