--- a/codecov.yaml
+++ b/codecov.yaml
@@ -8,10 +8,10 @@ coverage:
 
   status:
     project:                   # measuring the overall project coverage
-      default:
+      default:                 
         target: auto
-        # adjust accordingly based on how flaky your tests are
-        # this allows a 5% drop from the previous base commit coverage
-        threshold: 3%
+        # don't allow new commits to decrease coverage
+        threshold: 0%
+
 
     patch: false                 # measuring the coverage of new changes
