--- a/codecov.yaml
+++ b/codecov.yaml
@@ -2,16 +2,16 @@ codecov:
   require_ci_to_pass: yes
 
 coverage:
-  range: 20..100
+  range: 40..100
   round: down
   precision: 2
 
   status:
     project:                   # measuring the overall project coverage
-      default:                 
+      default:
         target: auto
-        # don't allow new commits to decrease coverage
-        threshold: 0%
+        # allow new commits to decrease coverage
+        threshold: 4%
 
 
     patch: false                 # measuring the coverage of new changes
