add cronjob to scale pipeline to zero after 15 minutes

--- a/chart-infra/templates/kube-cleanup-operator-deployment.yaml
+++ b/chart-infra/templates/kube-cleanup-operator-deployment.yaml
@@ -72,6 +72,14 @@ rules:
   - list
   - watch
   - delete
+- verbs:
+  - get
+  - patch
+  apiGroups:
+  - apps
+  resources:
+  - deployments
+  - deployments/scale
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
