only save the last successful termination run

--- a/chart-infra/templates/scale-to-zero.yaml
+++ b/chart-infra/templates/scale-to-zero.yaml
@@ -30,4 +30,5 @@ spec:
           restartPolicy: Never
           serviceAccountName: cleanup-operator
           serviceAccount: cleanup-operator
+  successfulJobsHistoryLimit: 1
 {{- end }}
