--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -9,6 +9,7 @@ export(filter_high_mito)
 export(filter_low_cellsize)
 export(generate_default_values_cellSizeDistribution)
 export(generate_default_values_classifier)
+export(generate_first_step_ids)
 export(load_cellranger_files)
 export(prepare_experiment)
 export(run_emptydrops)
