Fixed and added tests

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -10,8 +10,10 @@ export(filter_low_cellsize)
 export(generate_default_values_cellSizeDistribution)
 export(generate_default_values_classifier)
 export(generate_first_step_ids)
+export(getClusters)
 export(load_cellranger_files)
 export(prepare_experiment)
+export(runClusters)
 export(run_emptydrops)
 export(score_doublets)
 import(data.table)
