--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,7 @@ jobs:
           # we will also take semver'd tags like `1.0.0` and use them for releases
 
           if [ "${{ github.event_name }}" = "release" ] && [ "${{ github.event.action }}" = "released" ]; then
-            echo "::set-output name=tag::${REF_ID/refs-tags-/}"
+            echo "::set-output name=tag::$REF_ID"
           else
             echo "::set-output name=tag::$REF_ID-$GITHUB_SHA"
           fi
