added correct endpoint and temporary layout

--- a/chart-infra/templates/kubernetes-event-exporter-config.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-config.yaml
@@ -14,7 +14,20 @@ data:
     receivers:
       - name: "cleanup"
         webhook:
-          endpoint: "https://api-{{ .Values.sandboxId }}.scp-staging.biomage.net"
+          endpoint: "https://api-{{ .Values.sandboxId }}.scp-staging.biomage.net/v1/kubernetesEvents"
           headers:
             User-Agent: kube-event-exporter 1.0
-          layout: # Optional
+          layout:
+            eventType: "kubernetes-event"
+            createdAt: "{{ .GetTimestampMs }}"
+            details:
+              message: "{{ .Message }}"
+              reason: "{{ .Reason }}"
+              type: "{{ .Type }}"
+              count: "{{ .Count }}"
+              kind: "{{ .InvolvedObject.Kind }}"
+              name: "{{ .InvolvedObject.Name }}"
+              namespace: "{{ .Namespace }}"
+              component: "{{ .Source.Component }}"
+              host: "{{ .Source.Host }}"
+              labels: "{{ toJson .InvolvedObject.Labels}}"
