--- a/chart-infra/templates/kubernetes-event-exporter-config.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: event-exporter-cfg
-  namespace: "{{ .Values.namespace }}"
+  namespace: {{.Release.Namespace}}
 data:
   config.yaml: |
     logLevel: error
