--- a/chart-infra/templates/kubernetes-event-exporter-deployment.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: event-exporter
-  namespace: "{{ .Values.namespace }}"
+  namespace: {{.Release.Namespace}}
 spec:
   replicas: 1
   template:
