--- a/chart-infra/templates/kubernetes-event-exporter-roles.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-roles.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "{{ .Values.namespace }}"
+  name: {{.Release.Namespace}}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  namespace: "{{ .Values.namespace }}"
+  namespace: {{.Release.Namespace}}
   name: event-exporter
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -19,5 +19,5 @@ roleRef:
   name: view
 subjects:
   - kind: ServiceAccount
-    namespace: "{{ .Values.namespace }}"
+    namespace: {{.Release.Namespace}}
     name: event-exporter
