--- a/chart-infra/templates/kubernetes-event-exporter-config.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-config.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{.Release.Namespace}}
 data:
   config.yaml: |
-    logLevel: error
+    logLevel: info
     logFormat: json
     route:
       routes:
