only chek namespace

--- a/chart-infra/templates/kubernetes-event-exporter-config.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-config.yaml
@@ -10,7 +10,8 @@ data:
     route:
       routes:
         - match:
-            - receiver: "cleanup"
+          - namespace: "{{ .Release.Namespace }}
+            receiver: "cleanup"
     receivers:
       - name: "cleanup"
         webhook:
