fine-grained matching

--- a/chart-infra/templates/kubernetes-event-exporter-config.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-config.yaml
@@ -10,7 +10,10 @@ data:
     route:
       routes:
         - match:
-          - namespace: "{{ .Release.Namespace }}
+          - namespace: "{{ .Release.Namespace }}"
+            kind: "Pod"
+            labels:
+              type: "pipeline"
             receiver: "cleanup"
     receivers:
       - name: "cleanup"
