added more matchers

--- a/chart-infra/templates/kubernetes-event-exporter-config.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-config.yaml
@@ -11,10 +11,11 @@ data:
       routes:
         - match:
           - namespace: "{{ .Release.Namespace }}"
-            kind: "Pod"
+          - reason: "BackOff"
+          - kind: "Pod"
             labels:
               type: "pipeline"
-            receiver: "cleanup"
+          - receiver: "cleanup"
     receivers:
       - name: "cleanup"
         webhook:
