reverted back to event-exporter service account

--- a/chart-infra/templates/kubernetes-event-exporter-config.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-config.yaml
@@ -10,12 +10,10 @@ data:
     route:
       routes:
         - match:
-          - namespace: "{{ .Release.Namespace }}"
-          - reason: "BackOff"
           - kind: "Pod"
             labels:
               type: "pipeline"
-          - receiver: "cleanup"
+            receiver: "cleanup"
     receivers:
       - name: "cleanup"
         webhook:
