--- a/chart-infra/templates/kubernetes-event-exporter-roles.yaml
+++ b/chart-infra/templates/kubernetes-event-exporter-roles.yaml
@@ -1,18 +1,18 @@
-# apiVersion: v1
-# kind: ServiceAccount
-# metadata:
-#   namespace: {{.Release.Namespace}}
-#   name: event-exporter
-# ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: ClusterRoleBinding
-# metadata:
-#   name: event-exporter
-# roleRef:
-#   apiGroup: rbac.authorization.k8s.io
-#   kind: ClusterRole
-#   name: view
-# subjects:
-#   - kind: ServiceAccount
-#     namespace: {{.Release.Namespace}}
-#     name: event-exporter
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  namespace: {{.Release.Namespace}}
+  name: event-exporter
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: event-exporter
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: view
+subjects:
+  - kind: ServiceAccount
+    namespace: {{.Release.Namespace}}
+    name: event-exporter
