--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -23,17 +23,23 @@ RUN R -e "if(Sys.getenv('GITHUB_PAT') == '') stop('need to export GITHUB_PAT')"
 
 # install required R packages for the pipeline.
 RUN R -e "install.packages('remotes', repos = c(CRAN = 'https://cloud.r-project.org'))" && \
-    R -e "remotes::install_github('rstudio/renv@0.13.2')"
+    R -e "remotes::install_github('rstudio/renv@0.13.2')" && \
+    R -e "renv::init(bare = TRUE, settings = list(use.cache = FALSE))"
 
 # an initial lockfile is used to avoid frequent re-installs
 # use renv::snapshot(lockfile='renv.lock.init') if R dependency updates become slow to build
 COPY renv.lock.init .
-RUN R -e "renv::init(bare = TRUE); options(renv.consent = TRUE); renv::restore(lockfile='renv.lock.init')"
+RUN R -e "renv::restore(lockfile='renv.lock.init')"
 
 # use renv::snapshot() while R dependency updates are quick to build
 COPY renv.lock .
-RUN R -e "options(renv.consent = TRUE); renv::restore(lockfile='renv.lock', clean = TRUE)"
+RUN R -e "renv::restore(lockfile='renv.lock', clean = TRUE)"
 
+# move library and delete renv
+RUN mv /src/renv/library/R-4.0/x86_64-pc-linux-gnu /src/library && \
+    rm -rf /src/renv* && \
+    rm /src/.Rprofile && \
+    echo ".libPaths(c('/src/library', .libPaths()))" >> /usr/lib/R/etc/Rprofile.site
 
 # ---------------------------------------------------
 # PRODUCTION BUILD
