--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -18,7 +18,8 @@ Suggests:
     testthat (>= 3.0.0)
 Imports:
     data.table,
-    covr
+    covr,
+    batchelor
 Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
