--- a/.flux.yaml
+++ b/.flux.yaml
@@ -19,6 +19,6 @@ metadata:
 spec:
   releaseName: FILLED_IN_BY_CI
   chart:
-    git: git@github.com:biomage-ltd/pipeline
+    git: git@github.com:hms-dbmi-cellenics/pipeline
     path: chart-infra/
     ref: FILLED_IN_BY_CI
