--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,44 @@ on:
       - master
 
 jobs:
+  uncheck-integration-test:
+    name: Mark integration test as not run
+    runs-on: ubuntu-20.04
+    if: github.event_name == 'pull_request'
+    steps:
+      - id: get-pr-body
+        name: Get the current PR body
+        uses: jwalton/gh-find-current-pr@v1
+        with:
+          state: open
+
+      - id: create-unchecked-pr-body
+        name: Create unchecked PR body
+        run: |-
+          UNCHECKED_BODY=$(sed 's/- \[[Xx]\] Started end-to-end tests on the latest commit./- \[ \] Started end-to-end tests on the latest commit./' <<\EOF
+          ${{ steps.get-pr-body.outputs.body }}
+          EOF
+          )
+
+          UNCHECKED_BODY="${UNCHECKED_BODY//'%'/'%25'}"
+          UNCHECKED_BODY="${UNCHECKED_BODY//$'\n'/'%0A'}"
+          UNCHECKED_BODY="${UNCHECKED_BODY//$'\r'/'%0D'}"
+
+          echo "Unchecked PR body"
+          echo $UNCHECKED_BODY
+
+          echo "::set-output name=body::$UNCHECKED_BODY"
+
+      - id: uncheck-integration-checkbox
+        name: Uncheck the integration checkbox
+        uses: tzkhan/pr-update-action@v2
+        with:
+          repo-token: "${{ secrets.API_TOKEN_GITHUB }}"
+          head-branch-regex: "${{ github.head_ref }}"
+          lowercase-branch: false
+          body-template: "${{  steps.create-unchecked-pr-body.outputs.body }}"
+          body-update-action: "replace"
+
   build-docker:
     name: Build Docker container
     runs-on: ubuntu-20.04
@@ -36,7 +74,6 @@ jobs:
           REF_ID=$(echo $GITHUB_REF | sed 's/\//-/g')
 
           echo THIS BUILD HOTFIX/RELEASE IS RUNNING!! WOOT!
-          
 
           # the final tag is something like:
           # refs-heads-master-a4f8bc313dae
