--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -11,7 +11,7 @@ export(generate_default_values_cellSizeDistribution)
 export(generate_default_values_classifier)
 export(generate_first_step_ids)
 export(getClusters)
-export(load_cellranger_files)
+export(load_user_files)
 export(prepare_experiment)
 export(runClusters)
 export(run_emptydrops)
