--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -15,8 +15,9 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
+    httptest,
     testthat (>= 3.0.0)
-Imports:
+Imports: 
     data.table,
     covr,
     batchelor
