--- a/chart-infra/templates/pipeline-spawn-right-to-api.yaml
+++ b/chart-infra/templates/pipeline-spawn-right-to-api.yaml
@@ -10,7 +10,7 @@ rules:
   resources: ["pods"]
   verbs: ["get", "list", "patch", "delete"]
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: api-state-machine-can-spawn-pipeline-components
