--- a/codecov.yaml
+++ b/codecov.yaml
@@ -9,9 +9,9 @@ coverage:
   status:
     project:                   # measuring the overall project coverage
       default:                 
-        target: 0%
+        target: auto
         # don't allow new commits to decrease coverage
-        # threshold: 0%
+        threshold: 0%
 
 
     patch: false                 # measuring the coverage of new changes
