fix awscli install

--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -49,8 +49,12 @@ FROM builder AS prod
 # see at https://github.com/paws-r/paws/blob/main/docs/credentials.md for how PAWS
 # handles this
 #
-RUN wget -O jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 && chmod +x ./jq && cp jq /usr/bin && \
-    pip install awscli
+RUN wget -O jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 && \
+    chmod +x ./jq && \
+    cp jq /usr/bin && \
+    pip install PyYAML==3.10 && \
+    pip install awscli==1.25.0
+
 COPY aws_config /root/.aws/config
 
 # start app
