--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -35,6 +35,18 @@ RUN R -e "renv::restore(lockfile='renv.lock.init')"
 COPY renv.lock .
 RUN R -e "renv::restore(lockfile='renv.lock', clean = TRUE)"
 
+# move renv library and add path to Rprofile.site
+# then delete renv and other build files
+RUN RENV_LIB=$(echo "cat(.libPaths()[1])"|Rscript -) && \
+    mv $RENV_LIB /library && \
+    echo ".libPaths(c('/library', .libPaths()))" >> $(R RHOME)/etc/Rprofile.site && \
+    rm -rf /src/renv && \
+    rm .Rprofile renv.lock renv.lock.init requirements_debian.txt
+
+# add R package and test files to get code coverage
+COPY DESCRIPTION .
+COPY NAMESPACE .
+ADD tests ./tests
 
 # ---------------------------------------------------
 # PRODUCTION BUILD
