--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -171,8 +171,8 @@ jobs:
         run: |-
           docker run \
             --entrypoint /bin/bash \
-            -v $(pwd):/app $IMAGE_NAME \
-            -c "R -e 'cov <- covr::package_coverage(); covr::to_cobertura(cov, \"/app/coverage.xml\")'"
+            -v $(pwd)/covr:/covr $IMAGE_NAME \
+            -c "R -e 'cov <- covr::package_coverage(); covr::to_cobertura(cov, \"/covr/coverage.xml\")'"
 
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.tag, matrix.project) }}
@@ -181,7 +181,7 @@ jobs:
         name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
-          files: ./pipeline-runner/coverage.xml
+          files: ./covr/coverage.xml
 
       - id: push
         name: Push docker images to ECR
