update fs and Seurat

--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -50,9 +50,9 @@ COPY setup/get_sysdeps_run.R .
 RUN Rscript get_sysdeps_run.R
 
 # ---------------------------------------------------
-# PRODUCTION BUILD
+# COMMON MINIMAL BUILD
 # ---------------------------------------------------
-FROM rocker/r-ver:4.2.0 AS prod
+FROM rocker/r-ver:4.2.0 AS common
 WORKDIR /src/pipeline-runner
 
 # get source code and R packages
@@ -67,6 +67,12 @@ RUN echo "python3-pip" >> sysdeps_run.txt && \
     echo "wget" >> sysdeps_run.txt && \
     cat sysdeps_run.txt | xargs ./install_debian_packages.sh
 
+
+# ---------------------------------------------------
+# PRODUCTION BUILD
+# ---------------------------------------------------
+FROM common AS prod
+
 # add jq and aws cli so we can get identities using AWS IRSA roles
 #
 # see at https://docs.aws.amazon.com/eks/latest/userguide/iam-roles-for-service-accounts.html
@@ -74,23 +80,18 @@ RUN echo "python3-pip" >> sysdeps_run.txt && \
 #
 # see at https://github.com/paws-r/paws/blob/main/docs/credentials.md for how PAWS
 # handles this
-
 RUN wget -O jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 && \
     chmod +x ./jq && \
     cp jq /usr/bin && \
     pip install PyYAML==3.10 && \
     pip install awscli==1.25.0
 
-# add R package and test files
-ADD R ./R
-COPY DESCRIPTION .
-COPY NAMESPACE .
-ADD tests ./tests
-
-# copy runner
-COPY init.R .
-
 COPY aws_config /root/.aws/config
+
+# add R package files and runner
+ADD R ./R
+ADD tests ./tests
+COPY DESCRIPTION NAMESPACE init.R .
 
 # start app
 ENTRYPOINT ["Rscript", "init.R"]
@@ -99,33 +100,17 @@ ENTRYPOINT ["Rscript", "init.R"]
 # ---------------------------------------------------
 # DEVELOPMENT BUILD
 # ---------------------------------------------------
-FROM rocker/r-ver:4.2.0 AS dev
-WORKDIR /src/pipeline-runner
-
-# get source code and R packages
-COPY --from=builder /src /src
-
-# add renv library to .libPaths
-ENV RENV_LIB=/src/lib
-RUN echo ".libPaths(c('$RENV_LIB', .libPaths()))" >> $(R RHOME)/etc/Rprofile.site
-
-# install runtime system deps
-RUN echo "python3-pip" >> sysdeps_run.txt && \
-    cat sysdeps_run.txt | xargs ./install_debian_packages.sh
+FROM common AS dev
 
 # install Radian for interactive R shell
 # also install watchdog to automatically restart
 # when source files change
 RUN pip install -U jedi radian PyYAML watchdog[watchmedo]
 
-# add R package and test files
+# add R package files and runner
 ADD R ./R
-COPY DESCRIPTION .
-COPY NAMESPACE .
 ADD tests ./tests
-
-# copy runner
-COPY init.R .
+COPY DESCRIPTION NAMESPACE init.R .
 
 # start app
 ENTRYPOINT ["Rscript", "init.R"]
