clean setup files

--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -60,9 +60,11 @@ ENV RENV_LIB=/src/lib
 RUN echo ".libPaths(c('$RENV_LIB', .libPaths()))" >> $(R RHOME)/etc/Rprofile.site
 
 # install runtime system deps
+# cleanup setup files
 RUN echo "python3-pip" >> sysdeps_run.txt && \
     echo "wget" >> sysdeps_run.txt && \
-    cat sysdeps_run.txt | xargs ./install_debian_packages.sh
+    cat sysdeps_run.txt | xargs ./install_debian_packages.sh && \
+    rm -rf *
 
 
 # ---------------------------------------------------
